start atlassian-iam

--- a/master.yaml
+++ b/master.yaml
@@ -95,7 +95,7 @@ Resources:
 
   MyIAMRole:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    #Condition: "UseProdEnv"
     Properties:
       TemplateURL: !Sub "${PMTemplateURL}/atlassian-iam.yaml"
       TimeoutInMinutes: '5'
