--- a/infrastructure/atlassian-securitygroup.yaml
+++ b/infrastructure/atlassian-securitygroup.yaml
@@ -33,13 +33,11 @@ Parameters:
 
 
 Resources:
-  # By default we're just allowing access from the load balancer.  If you want to SSH 
-  # into the hosts, or expose non-load balanced services you can open their ports here.
-  MyMongoSG:
+  MyJiraSG:
     Type: "AWS::EC2::SecurityGroup"
     Properties: 
       VpcId: !Ref "PMVPC"
-      GroupDescription: "Mongo Replication Cluster Security Group"
+      GroupDescription: "Jira Instance Security Group"
       SecurityGroupIngress:
         - IpProtocol: 'icmp'
           FromPort: '-1'
@@ -49,25 +47,12 @@ Resources:
           FromPort: "22"
           IpProtocol: "tcp"
           ToPort: "22"
-        - CidrIp: !Ref "PMOWNIP"
-          FromPort: "27017"
-          IpProtocol: "tcp"
-          ToPort: "27017"
       SecurityGroupEgress:
         - IpProtocol: '-1'
           CidrIp: '0.0.0.0/0'
       Tags:
         - Key: "Name"
-          Value: !Sub "${PMServerEnv}-MyMongoSG"
-
-  MyMongoSGIngress1:
-    Type: "AWS::EC2::SecurityGroupIngress"
-    Properties:
-      GroupId:
-        Ref: "MyMongoSG"
-      IpProtocol: -1
-      SourceSecurityGroupId:
-        Ref: "MyMongoSG"
+          Value: !Sub "${PMServerEnv}-MyJiraSG"
 
   #####################################################################################
   # Additional Firewall Protection (inbound and outbound traffic at the subnet level)
@@ -113,26 +98,12 @@ Resources:
         From: '22'
         To: '22'
 
-  ####### INBOUND Mongo Network ACL RULES #######
-  InboundSSHNACL:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '400'
-      Protocol: "6"
-      RuleAction: "allow"
-      Egress: "false"
-      CidrBlock: !Ref "PMOWNIP"
-      PortRange:
-        From: '27017'
-        To: '27017'
-
   ####### INBOUND Ephemeral Ports Network ACL RULES #######
   InboundEPHNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '500'
+      RuleNumber: '400'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "false"
@@ -146,7 +117,7 @@ Resources:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '600'
+      RuleNumber: '500'
       Protocol: "1"
       RuleAction: "allow"
       Egress: "false"
@@ -197,27 +168,12 @@ Resources:
         From: '22'
         To: '22'
 
-
-  ####### OUTBOUND Mongo Network ACL RULES #######
-  OutboundSSHNACL:
-    Type: "AWS::EC2::NetworkAclEntry"
-    Properties:
-      NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '400'
-      Protocol: "6"
-      RuleAction: "allow"
-      Egress: "true"
-      CidrBlock: !Ref "PMOWNIP"
-      PortRange:
-        From: '27017'
-        To: '27017'
-
   ####### OUTBOUND Ephemeral Ports Network ACL RULES #######
   OutboundEPHNACL:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '500'
+      RuleNumber: '400'
       Protocol: "6"
       RuleAction: "allow"
       Egress: "true"
@@ -231,7 +187,7 @@ Resources:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
       NetworkAclId: !Ref "PMNACL"
-      RuleNumber: '600'
+      RuleNumber: '500'
       Protocol: "1"
       RuleAction: "allow"
       Egress: "true"
@@ -243,8 +199,8 @@ Resources:
 
 Outputs:
 
-  MyMongoSG: 
-    Description: "A reference to the security group for Mongo Cluster hosts"
-    Value: !Ref "MyMongoSG"
+  MyJiraSG: 
+    Description: "A reference to the security group for Jira hosts"
+    Value: !Ref "MyJiraSG"
     Export:
-      Name: !Sub "${PMServerEnv}-MyMongoSG"
+      Name: !Sub "${PMServerEnv}-MyJiraSG"
