--- a/master.yaml
+++ b/master.yaml
@@ -149,7 +149,7 @@ Resources:
 
   MyRDS:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    #Condition: "UseProdEnv"
     DependsOn:
     - "MySecurityGroup"
     Properties:
