--- a/master.yaml
+++ b/master.yaml
@@ -135,7 +135,7 @@ Resources:
 
   MySecurityGroup:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    #Condition: "UseProdEnv"
     DependsOn:
     - "MyVPC"
     Properties:
