--- a/master.yaml
+++ b/master.yaml
@@ -171,6 +171,7 @@ Resources:
 
   MyJiraELB:
     Type: "AWS::CloudFormation::Stack"
+    #Condition: "UseProdEnv"
     DependsOn:
     - "MyRDS"
     Properties:
@@ -194,7 +195,6 @@ Resources:
   #     Parameters:
   #       PMServerEnv: !Ref "AWS::StackName"
   #       PMKeyName: !Ref "PMKeyName"
-  #       PMMongoSecondary: !Ref "PMMongoSecondary"
   #       PMIAMS3CWInstanceProfile: !GetAtt "MyIAMRole.Outputs.IAMS3CWInstanceProfile"
   #       PMMongoReplicatesetName: !FindInMap ["EnvMap", !Ref "AWS::StackName", "MongoReplicatesetName"]
   #       PMRegionAMI: !FindInMap ["RegionMap", !Ref "AWS::Region", "AMI"]
