--- a/infrastructure/atlassian-route53.yaml
+++ b/infrastructure/atlassian-route53.yaml
@@ -5,60 +5,43 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
     This template deploys route53 Setup,
-
+    Alias Web Elastic Load Balancer to <domain>
 Parameters: 
+
+  PMDomainJira:
+    Description: "A reference to the Jira FQDN domain name"
+    Type: "String"
 
   PMHostedZone:
     Description: "A reference to the Hosted Zone"
     Type: "String"
 
-  PMDomainMongoSecondary1:
-    Description: "A reference to the Mongo Secondary 1 FQDN domain name"
+  PMJiraLBDNSName:
+    Description: "A reference to the Jira ELB DNS Name"
     Type: "String"
 
-  PMMongoSEC1EC2IP:
-    Description: "A reference to the Mongo Secondary 1 EIP"
+  PMJiraLBHostedZoneId:
+    Description: "A reference to the Jira ELB Hosted Zone ID"
     Type: "String"
 
-  PMDomainMongoMaster:
-    Description: "A reference to the Mongo Master FQDN domain name"
-    Type: "String"
-
-  PMMongoMSEC2IP:
-    Description: "A reference to the Mongo Master EIP"
-    Type: "String"
 
 Resources:
 
-  DNSRecordMongoSEC1EC2:
-    Type: "AWS::Route53::RecordSet"
+  Route53:
+    Type: "AWS::Route53::RecordSetGroup"
     Properties:
       HostedZoneName: !Sub "${PMHostedZone}."
-      Comment: "DNS name for Mongo Secondary 1."
-      Name: !Sub "${PMDomainMongoSecondary1}."
-      Type: 'A'
-      TTL: '600'
-      ResourceRecords:
-      - !Ref "PMMongoSEC1EC2IP"
+      Comment: "Zone apex alias targeted to myELB LoadBalancer."
+      RecordSets:
+      - Name: !Sub "${PMDomainJira}."
+        Type: 'A'
+        AliasTarget:
+          HostedZoneId: !Ref "PMJiraLBHostedZoneId"
+          DNSName: !Ref "PMJiraLBDNSName"
 
-  DNSRecordMongoMSEC2:
-    Type: "AWS::Route53::RecordSet"
-    Properties:
-      HostedZoneName: !Sub "${PMHostedZone}."
-      Comment: "DNS name for Mongo Master."
-      Name: !Sub "${PMDomainMongoMaster}."
-      Type: 'A'
-      TTL: '600'
-      ResourceRecords:
-      - !Ref "PMMongoMSEC2IP"
 
 Outputs:
 
-  DNSRecordMongoSEC1EC2:
+  JiraRoute53:
     Description: "A reference to the Route53"
-    Value: !Ref "DNSRecordMongoSEC1EC2"
-
-  DNSRecordMongoMSEC2:
-    Description: "A reference to the Route53"
-    Value: !Ref "DNSRecordMongoMSEC2"
-
+    Value: !Ref "Route53"
