--- a/master.yaml
+++ b/master.yaml
@@ -217,7 +217,7 @@ Resources:
 
   MyDNS:
     Type: "AWS::CloudFormation::Stack"
-    Condition: "UseProdEnv"
+    #Condition: "UseProdEnv"
     DependsOn:
     - "MyJiraAutoScaling"
     Properties:
