--- a/infrastructure/atlassian-elb.yaml
+++ b/infrastructure/atlassian-elb.yaml
@@ -51,22 +51,35 @@ Resources:
       HealthCheck:
         HealthyThreshold: '6'
         Interval: '30'
-        Target: "HTTP:80/"
+        Target: "TCP:8000"
         Timeout: '5'
         UnhealthyThreshold: '8'
+      # HealthCheck:
+      #   HealthyThreshold: '6'
+      #   Interval: '30'
+      #   Target: "HTTP:80/"
+      #   Timeout: '5'
+      #   UnhealthyThreshold: '8'
       LoadBalancerName: !Sub "${PMServerEnv}-ELB"
       Listeners:
-      - InstancePort: '80'
-        InstanceProtocol: "HTTP"
-        LoadBalancerPort: '80'
-        Protocol: "HTTP"
       - LoadBalancerPort: '443'
         Protocol: "HTTPS"
-        InstancePort: '80'
+        InstancePort: '8000'
         InstanceProtocol: "HTTP"
         SSLCertificateId: !Ref "PMDomain1CertARN"
         PolicyNames:
         - !Sub "${PMServerEnv}-SSLNegotiationPolicy"
+      # - InstancePort: '80'
+      #   InstanceProtocol: "HTTP"
+      #   LoadBalancerPort: '80'
+      #   Protocol: "HTTP"
+      # - LoadBalancerPort: '443'
+      #   Protocol: "HTTPS"
+      #   InstancePort: '80'
+      #   InstanceProtocol: "HTTP"
+      #   SSLCertificateId: !Ref "PMDomain1CertARN"
+      #   PolicyNames:
+      #   - !Sub "${PMServerEnv}-SSLNegotiationPolicy"
       # List aws elb describe-load-balancer-policies
       Policies:
       - PolicyName: !Sub "${PMServerEnv}-SSLNegotiationPolicy"
