--- a/master.yaml
+++ b/master.yaml
@@ -55,9 +55,9 @@ Parameters:
       - "m4.xlarge"
 
   PMSpotPrice:
-    Description: 'Maximum spot price to bid in USD (e.g.: 0.32).'
+  Description: "Maximum spot price to bid in USD (e.g.: 0.32)."
     Default: '0.01'
-    Type: Number
+    Type: "Number"
 
   # Term: OnDemand
   # Instance Type: t2.medium (2-CPU, 4GB-MEM)
