--- a/master.yaml
+++ b/master.yaml
@@ -51,6 +51,7 @@ Parameters:
     AllowedValues: 
       - "t2.micro"
       - "t2.medium"
+      - "m3.medium"
       - "m4.large"
       - "m4.xlarge"
 
