--- a/infrastructure/atlassian-autoscaling-jira.yaml
+++ b/infrastructure/atlassian-autoscaling-jira.yaml
@@ -23,11 +23,12 @@ Parameters:
     Type: "String"
 
   PMJiraInstanceType: 
-    Description: "Enter t2.micro or m1.small. Default is t2.micro."
+    Description: "Enter an instance type. Default is t2.micro."
     Type: "String"
     AllowedValues: 
       - "t2.micro"
       - "t2.medium"
+      - "m3.medium"
       - "m4.large"
       - "m4.xlarge"
 
