--- a/infrastructure/atlassian-elb.yaml
+++ b/infrastructure/atlassian-elb.yaml
@@ -51,7 +51,8 @@ Resources:
       HealthCheck:
         HealthyThreshold: '6'
         Interval: '30'
-        Target: "TCP:8000"
+        Target: "TCP:22"
+        #Target: "TCP:8000"
         Timeout: '5'
         UnhealthyThreshold: '8'
       LoadBalancerName: !Sub "${PMServerEnv}-ELB"
