update full access to S3backup

--- a/infrastructure/atlassian-s3bucket.yaml
+++ b/infrastructure/atlassian-s3bucket.yaml
@@ -59,9 +59,13 @@ Resources:
           Principal:
             AWS: "*"
           Action:
-            - "s3:PutObject"
-            - "s3:PutObjectAcl"
-            - "s3:GetObject"
+          - "s3:PutObject"
+          - "s3:PutObjectAcl"
+          - "s3:GetObject"
+          - "s3:GetObjectAcl"
+          - "s3:ListBucket"
+          - "s3:ListObjects"
+          - "s3:DeleteObject"
           Resource: !Join ["", ["arn:aws:s3:::", !Ref "S3Backup", "/*"]]
           Condition:
             StringNotEquals:
