--- a/infrastructure/atlassian-s3bucket.yaml
+++ b/infrastructure/atlassian-s3bucket.yaml
@@ -58,14 +58,7 @@ Resources:
           Effect: "Deny"
           Principal:
             AWS: "*"
-          Action:
-          - "s3:PutObject"
-          - "s3:PutObjectAcl"
-          - "s3:GetObject"
-          - "s3:GetObjectAcl"
-          - "s3:ListBucket"
-          - "s3:ListObjects"
-          - "s3:DeleteObject"
+          Action: "s3:*"
           Resource: !Join ["", ["arn:aws:s3:::", !Ref "S3Backup", "/*"]]
           Condition:
             StringNotEquals:
