--- a/infrastructure/atlassian-s3bucket.yaml
+++ b/infrastructure/atlassian-s3bucket.yaml
@@ -60,7 +60,8 @@ Resources:
             AWS: "*"
           #Action: "s3:*"
           Action:
-          - s3:GetObject
+            - s3:GetObject
+            - s3:PutObjectAcl
           Resource: !Join ["", ["arn:aws:s3:::", !Ref "S3Backup", "/*"]]
           Condition:
             StringNotEquals:
